5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1635_2447.log
== TEST (2019-04-08 15:17:54) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	mensagem = "falta" + x
else: 
	mensagem = "troco de" + y
	
print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = "falta" + x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:18) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	mensagem = "falta x"
else: 
	mensagem = "troco de y"
	
print(round(y, 2))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:33) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = x - y

if(x > y):
	mensagem = "Falta" + x
else: 
	mensagem = "Troco de" + y
	
print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem = "Falta" + x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:57) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = x - y

if(x > y):
	mensagem = "Falta"
else: 
	mensagem = "Troco de" + troco
	
print(round(y, 2))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:19) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = x - y

if(x > y):
	mensagem = "Falta"
else: 
	mensagem = "Troco de" + "troco"
	
print(round(y, 2))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:50) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	mensagem = "Falta" + "troco"
else: 
	mensagem = "Troco de" + "troco"
	
print(round(y, 2))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:23) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	mensagem = "Falta" + "troco"
else: 
	mensagem = "Troco de" + "troco"

print(mensagem)
print(round(y, 2))
-- OUTPUT:
Faltatroco
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:59) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	mensagem = "Falta" + "troco"
else: 
	mensagem = "Troco de" + "troco"
	print(round(y, 2))
-- OUTPUT:
Faltatroco
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:22) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	mensagem = "Falta" + "troco"
else: 
	mensagem = "Troco de" + "troco"
	troco = y - x
	print(round(y, 2))
-- OUTPUT:
Faltatroco
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:59) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	print("Falta" + "troco")
else: 
	mensagem = "Troco de" + "troco"
	troco = y - x
	print(round(y, 2))
-- OUTPUT:
Faltatroco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:35) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	print("Falta" + "troco")
else: 
	mensagem = "Troco de" + "troco"
	troco = y - x
	print(round(y, 2))
-- OUTPUT:
Faltatroco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:45) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	print("Falta" + "troco")
else: 
	mensagem = "Troco de" + "troco"
	troco = y - x
	print(round(y, 2))
-- OUTPUT:
Faltatroco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:02) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	print("Falta" + "troco")
else: 
	mensagem = "Troco de" + troco
	troco = y - x
	print(round(y, 2))
-- OUTPUT:
Faltatroco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:16) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

if(x > y):
	print("Falta" + troco)
else: 
	mensagem = "Troco de" + troco
	troco = y - x
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta" + troco)
NameError: name 'troco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:32) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	print("Falta" + troco)
else: 
	mensagem = "Troco de" + troco
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:38) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	print("Falta" + troco)
else: 
	mensagem = "Troco de" + troco
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:58) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	print("Falta" + troco)
else: 
	mensagem = "Troco de" + troco
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:20) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x

if(x > y):
	print("Falta" + troco)
else: 
	print("Troco de" + troco)
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:58) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = y - x
print(round(y, 2))

if(x > y):
	print("Falta" + troco)
else: 
	print("Troco de" + troco)
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:30) 
-- CODE:
x = float(input("preco: "))
y = str(input("pag: "))

troco = y - x
print(round(y, 2))

if(x > y):
	print("Falta" + troco)
else: 
	print("Troco de" + troco)
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    troco = y - x
TypeError: unsupported operand type(s) for -: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:42) 
-- CODE:
x = str(input("preco: "))
y = str(input("pag: "))

troco = y - x
print(round(y, 2))

if(x > y):
	print("Falta" + troco)
else: 
	print("Troco de" + troco)
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    troco = y - x
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:08) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta" + troco)
else: 
	print("Troco de" + troco)
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:26) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta" + troco)
else: 
	print("Troco de" + troco)
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + troco)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:51) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de")
	print(round(y, 2))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:29:07) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (x - y)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de")
	print(round(y, 2))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:29:35) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (x - y)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de")
	print(round(troco, 2))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:29:46) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de")
	print(round(troco, 2))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:29:51) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de")
	print(round(troco, 2))
-- EXECUTION TIME:
0.189052
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
12.0
Falta
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
60.0
Troco de
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
516.0
Troco de
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:21) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de"(round(troco, 2))
-- ERROR:
File "XXXX", line 10
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:30) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de"(round(troco, 2)))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:03) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print(round("troco de", 2))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:47) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de" + (round(troco, 2))
-- ERROR:
File "XXXX", line 10
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:53) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de" + (round(troco, 2)))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:09) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de" (round(troco, 2)))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:18) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de" (round(troco, 2))
-- ERROR:
File "XXXX", line 10
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:26) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de" (round(troco, 2)))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:33:18) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta")
else: 
	print("Troco de")
	print((round(troco, 2)))
-- OUTPUT:
12.0
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:53) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- OUTPUT:
12.0
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:34:58) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- EXECUTION TIME:
0.166138
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
12.0
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
60.0
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
516.0
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:00) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- OUTPUT:
12.0
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:35:18) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- EXECUTION TIME:
0.185266
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
12.0
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
60.0
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
516.0
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:20) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- OUTPUT:
12.0
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:35:32) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- EXECUTION TIME:
0.190593
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
12.0
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
60.0
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
516.0
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:34) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
print(round(y, 2))
if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- OUTPUT:
12.0
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:56) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)

if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:36:01) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)

if(x > y):
	print("Falta", troco)
else: 
	print("Troco de",(round(troco, 2)))
-- EXECUTION TIME:
0.188544
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:37:01) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
dif = (x - y)
if(x > y):
	print("Falta", (round(dif, 2)))
else: 
	print("Troco de",(round(troco, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:37:05) 
-- CODE:
x = float(input("preco: "))
y = float(input("pag: "))

troco = (y - x)
dif = (x - y)
if(x > y):
	print("Falta", (round(dif, 2)))
else: 
	print("Troco de",(round(troco, 2)))
-- EXECUTION TIME:
0.149347
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
